--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "experimentalDecorators": true,
     "target": "es2020",
     "noImplicitAny": false,
+    "declaration": true,
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist"
