--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Unofficial NodeJS library for controlling Smart Switches in the PC game Rust",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "private": false,
   "scripts": {
     "build": "tsc",
     "prepublish": "npm run build"
