--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": false,
   "scripts": {
     "build": "tsc",
+    "protogen": "protoc --ts_out src/interfaces --proto_path protos protos/rustplus.proto",
     "prepublish": "npm run build"
   },
   "repository": {
